--- a/index.html
+++ b/index.html
@@ -9,4 +9,21 @@
     <title>Maloca</title>
 </head>
 
+<body>
+    <header>
+        <nav class="header-block">
+            <a href="/inicio" class="button">início</a>
+            <a href="/comunidades" class="button">comunidades</a>
+            <a href="/perfil" class="button">perfil</a>
+        </nav>
+        <img src="icon.png">
+        <div id="tools" class="header-block">
+            <a href="/editar" class="button">editar</a>
+            <a href="/clonar" class="button">clonar</a>
+            <a href="/info" class="button">info</a>
+        </div>
+    </header>
+
+</body>
+
 </html>
