--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         </div>
     </header>
 
+
+    <footer>
+        <nav>
+            <a href="https://github.com/dandeliao/maloca" class="button">Github</a>
+            <span>·</span>
+            <a href="https://pt.wikipedia.com/wiki/maloca" class="button">Quem somos nós</a>
+        </nav>
+    </footer>
+
 </body>
 
 </html>
