refactor: altera caminho do ícone

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="/comunidades" class="button">comunidades</a>
             <a href="/perfil" class="button">perfil</a>
         </nav>
-        <img src="icon.png">
+        <img src="/images/icon.png">
         <div id="tools" class="header-block">
             <a href="/editar" class="button">editar</a>
             <a href="/clonar" class="button">clonar</a>
