feat: adiciona links de navegação

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,10 @@
     <title>SPA Raiz</title>
 </head>
 <body>
+    <nav>
+        <a href="/" class="nav-link" data-link>Início</a>
+        <a href="/perfil" class="nav-link" data-link>Perfil</a>
+    </nav>
     
     <script type="module" src="/static/js/index.js"></script>
 </body>
