feat: cria router para views

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,8 @@
         <a href="/perfil" class="nav-link" data-link>Perfil</a>
     </nav>
     
+    <main id="view"></main>
+
     <script type="module" src="/static/js/index.js"></script>
 </body>
 </html>
