feat: cria barra superior

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <nav>
-        <a href="/" class="nav-link" data-link>Início</a>
-        <a href="/perfil" class="nav-link" data-link>Perfil</a>
-    </nav>
+    <div class="appBar">
+        <nav>
+            <a href="/" class="nav-link" data-link>início</a>
+            <a href="/perfil" class="nav-link" data-link>perfil</a>
+        </nav>
+        <img src="/static/img/icon.png" alt="maloca"/>
+        <div class="actions">
+            <button class="btn">editar</button>
+            <button class="btn">clonar</button>
+            <button class="btn">info</button>
+        </div>
+
+    </div>
     
     <main id="view"></main>
 
