--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPA Raiz</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/assets/css/reset.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <div class="appBar">
@@ -13,7 +13,7 @@
             <a href="/" class="nav-link" data-link>início</a>
             <a href="/perfil" class="nav-link" data-link>perfil</a>
         </nav>
-        <img src="/img/icon.png" alt="maloca"/>
+        <img src="/assets/img/icon.png" alt="maloca"/>
         <div class="actions">
             <button class="btn">editar</button>
             <button class="btn">clonar</button>
@@ -24,6 +24,6 @@
     
     <main id="view"></main>
 
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="/assets/js/index.js"></script>
 </body>
 </html>
