--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPA Raiz</title>
+    <title>Maloca</title>
+    <link rel="icon" href="/assets/img/icon.png" type="image/png">
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
