feat: adiciona components

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,8 @@
     
     <main id="view"></main>
 
+    <script type="module" src="/assets/js/components/mContainer.js"></script>
+    <script type="module" src="/assets/js/components/mCard.js"></script>
     <script type="module" src="/assets/js/index.js"></script>
 </body>
 </html>
