fix: corrige rotas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <div class="appBar">
         <nav>
             <a href="/" class="nav-link" data-link>início</a>
-            <a href="/perfil" class="nav-link" data-link>perfil</a>
+            <a href="/pessoa/eu" class="nav-link" data-link>perfil</a>
         </nav>
         <img src="/assets/img/icon.png" alt="maloca"/>
         <div class="actions">
