feat: adiciona footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <div class="appBar">
+    <div class="appBar app">
         <nav>
             <a href="/" class="nav-link" data-link>início</a>
             <a href="/pessoa/eu" class="nav-link" data-link>perfil</a>
@@ -24,6 +24,12 @@
     </div>
     
     <main id="view"></main>
+
+    <footer class="appFooter app">
+        <a href="https://github.com/dandeliao/maloca">contribua</a>
+        <span>·</span>
+        <a href="https://pt.wikipedia.com/wiki/maloca">quem somos nós</a>
+    </footer>
 
     <script type="module" src="/assets/js/components/mContainer.js"></script>
     <script type="module" src="/assets/js/components/mCard.js"></script>
