feat: adiciona funcionalidade para botão editar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,9 +16,9 @@
         </nav>
         <img src="/assets/img/icon.png" alt="maloca"/>
         <div class="actions">
-            <button class="btn">editar</button>
-            <button class="btn">clonar</button>
-            <button class="btn">info</button>
+            <button id="btn-editar" class="btn">editar</button>
+            <button id="btn-clonar" class="btn">clonar</button>
+            <button id="btn-info" class="btn">info</button>
         </div>
 
     </div>
