fix: estrutura de diretórios

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/assets/img/icon.png" type="image/png">
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/modal.css">
 </head>
 <body>
     <div class="appBar app">
@@ -31,9 +32,9 @@
         <a href="https://pt.wikipedia.com/wiki/maloca">quem somos nós</a>
     </footer>
 
-    <script type="module" src="/assets/js/components/maloca/mContainer.js"></script>
-    <script type="module" src="/assets/js/components/maloca/mCard.js"></script>
-    <script type="module" src="/assets/js/components/maloca/mLink.js"></script>
+    <script type="module" src="/assets/js/components/mContainer.js"></script>
+    <script type="module" src="/assets/js/components/mCard.js"></script>
+    <script type="module" src="/assets/js/components/mLink.js"></script>
     <script type="module" src="/assets/js/index.js"></script>
 </body>
 </html>
