feat: adiciona modal popup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,16 @@
         </div>
 
     </div>
+
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <p class="close">&times;</p>
+            </div>
+            <div class="modal-body">
+            </div>
+        </div>
+    </div>
     
     <main id="view"></main>
 
