--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,7 @@
     <script type="module" src="/assets/js/components/mContainer.js"></script>
     <script type="module" src="/assets/js/components/mCard.js"></script>
     <script type="module" src="/assets/js/components/mLink.js"></script>
+    <script type="text/javascript" src="/assets/libs/ace/src-noconflict/ace.js"></script>
     <script type="module" src="/assets/js/index.js"></script>
 </body>
 </html>
