feat: cria view "painel"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <div class="appBar app">
         <nav>
             <a href="/" class="nav-link" data-link>início</a>
-            <a href="/pessoa/eu" class="nav-link" data-link>perfil</a>
+            <a href="/painel" class="nav-link" data-link>painel</a>
         </nav>
         <img src="/assets/img/icon.png" alt="maloca"/>
         <div class="actions">
