fix: centraliza elementos do footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,9 +37,13 @@
     <main id="view"></main>
 
     <footer class="appFooter app">
-        <a href="https://github.com/dandeliao/maloca">contribua</a>
+        <div class="esquerda">
+            <a href="https://github.com/dandeliao/maloca">contribua</a>
+        </div>
         <span>·</span>
-        <a href="https://pt.wikipedia.com/wiki/maloca">quem somos nós</a>
+        <div class="direita">
+            <a href="https://pt.wikipedia.com/wiki/maloca">quem somos nós</a>
+        </div>
     </footer>
 
     <script type="module" src="/assets/js/components/mContainer.js"></script>
