feat: cria web components diversos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,14 @@
     <script type="module" src="/assets/js/components/mContainer.js"></script>
     <script type="module" src="/assets/js/components/mCard.js"></script>
     <script type="module" src="/assets/js/components/mLink.js"></script>
+    <script type="module" src="/assets/js/components/mAvatar.js"></script>
+    <script type="module" src="/assets/js/components/mDescricao.js"></script>
+    <script type="module" src="/assets/js/components/mFundo.js"></script>
+    <script type="module" src="/assets/js/components/mNome.js"></script>
+    <script type="module" src="/assets/js/components/mConjuntoDeLinguagem.js"></script>
+
     <script type="text/javascript" src="/assets/libs/ace/src-noconflict/ace.js"></script>
+
     <script type="module" src="/assets/js/index.js"></script>
 </body>
 </html>
