feat: componentes com lista de pessoas/comunidades

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,10 @@
     <script type="module" src="/assets/js/components/mFundo.js"></script>
     <script type="module" src="/assets/js/components/mNome.js"></script>
     <script type="module" src="/assets/js/components/mConjuntoDeLinguagem.js"></script>
+    <script type="module" src="/assets/js/components/mPessoas.js"></script>
+    <script type="module" src="/assets/js/components/mComunidades.js"></script>
+
+
 
     <script type="text/javascript" src="/assets/libs/ace/src-noconflict/ace.js"></script>
 
