fix: altera link do "quem somos nós" no footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
         </div>
         <span>·</span>
         <div class="direita">
-            <a href="https://pt.wikipedia.com/wiki/maloca">quem somos nós</a>
+            <a href="https://www.youtube.com/watch?v=OrQIMUe2uBQ">quem somos nós</a>
         </div>
     </footer>
 
