maint: ajusta comentários

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,8 +57,7 @@
     <script type="module" src="/assets/js/components/mPessoas.js"></script>
     <script type="module" src="/assets/js/components/mComunidades.js"></script>
 
-
-
+    <!-- Editor de código. Ver https://github.com/ajaxorg/ace -->
     <script type="text/javascript" src="/assets/libs/ace/src-noconflict/ace.js"></script>
 
     <script type="module" src="/assets/js/index.js"></script>
