--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
 
-	<div class="nav bar">
+	<!-- <div class="nav bar">
 		<nav>
+			<img-button imagem="/assets/images/menu.png" descricao="menu"></img-button>
+			<img-button imagem="/assets/images/maloca.png" descricao="página inicial"></img-button>
 			<a href="/" class="navlink" data-link>Início</a>
 			<a href="/boasvindas" class="navlink" data-link>Boas-vindas</a>
 			<a href="/registro" class="navlink" data-link>Registro</a>
@@ -21,14 +23,15 @@
 			<a href="/configuracao" class="navlink" data-link>Configuração</a>
 			<a href="/pessoa/eu" class="navlink" data-link>Meu perfil</a>
 		</nav>
-		<img src="/assets/images/icon.png" alt="maloca"/>
+		<img src="/assets/images/maloca.png" alt="maloca"/>
         <div class="actions">
-            <button id="btn-editar" class="action">editar</button>
-            <button id="btn-clonar" class="action">clonar</button>
-            <button id="btn-info" class="action">info</button>
+			<img-button id="btn-editar" class="action" imagem="/assets/images/editar.png" descricao="editar"></img-button>
+			<img-button id="btn-clonar" class="action" imagem="/assets/images/clonar.png" descricao="clonar"></img-button>
+			<img-button id="btn-info" class="action" imagem="/assets/images/info.png" descricao="informação"></img-button>
         </div>
-    </div>
+    </div> -->
 
+	<nav-bar>maloca</nav-bar>
     
 	<main id="viewer"></main>
 
@@ -42,6 +45,8 @@
         </div>
     </footer>
 
+	<script src="/assets/components/imgButton.js"></script>
+	<script src="/assets/components/navBar.js"></script>
 	<script type="module" src="/assets/app.js"></script>
 
 </body>
