--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Maloca</title>
-	<link rel="icon" href="/assets/images/icon.png" type="image/png">
+	<title>maloca</title>
+	<link rel="icon" href="/assets/images/maloca.png" type="image/png">
     <link rel="stylesheet" href="/assets/styles/reset.css">
     <link rel="stylesheet" href="/assets/styles/app.css">
 </head>
