--- a/app/index.html
+++ b/app/index.html
@@ -35,18 +35,11 @@
     
 	<main id="viewer"></main>
 
-	<footer class="footer bar">
-        <div class="esquerda">
-            <a href="https://github.com/dandeliao/maloca">contribua</a>
-        </div>
-        <span>·</span>
-        <div class="direita">
-            <a href="https://github.com/dandeliao/maloca">quem somos nós</a>
-        </div>
-    </footer>
+	<footer-bar></footer-bar>
 
 	<script src="/assets/components/imgButton.js"></script>
 	<script src="/assets/components/navBar.js"></script>
+	<script src="/assets/components/footerBar.js"></script>
 	<script type="module" src="/assets/app.js"></script>
 
 </body>
