--- a/app/index.html
+++ b/app/index.html
@@ -28,15 +28,15 @@
     
 	<main id="viewer"></main>
 
-	<footer>
+	<footer id="footer">
 		<div class="footer-group">
-            <a href="https://github.com/dandeliao/maloca">contribua</a>
+            <a href="https://github.com/dandeliao/maloca" style="vertical-align: middle;">contribua</a>
         </div>
         <div class="footer-group">
 			<span style="vertical-align: middle;">.</span>
 		</div>
         <div class="footer-group">
-            <a href="https://www.youtube.com/watch?v=OrQIMUe2uBQ">quem somos nós</a>
+            <a href="https://www.youtube.com/watch?v=OrQIMUe2uBQ" style="vertical-align: middle;">quem somos nós</a>
         </div>
 	</footer>
 
