--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="/assets/images/maloca.png" type="image/png">
     <link rel="stylesheet" href="/assets/styles/reset.css">
     <link rel="stylesheet" href="/assets/styles/app.css">
+	<link rel="stylesheet" href="/assets/styles/boasVindas.css">
 </head>
 <body>
 
