implementa barra de abas e páginas pessoais

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
 			<img-button id="info" class="disabled" imagem="/assets/images/info.png" descricao="informação"></img-button>
 		</div>
 	</nav>
+
+	<div id="tab-bar"></div>
     
 	<main id="viewer"></main>
 
@@ -42,6 +44,7 @@
 	</footer>
 
 	<script src="/assets/components/imgButton.js"></script>
+	<script src="/assets/components/tab.js"></script>
 	<script type="module" src="/assets/app.js"></script>
 
 </body>
