implementa componente viewer

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
 	<div id="tab-bar"></div>
     
-	<main id="viewer"></main>
+	<maloca-viewer id="viewer"></maloca-viewer>
 
 	<footer id="footer">
 		<div class="footer-group">
