carrega script do componente viewer

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
 
 	<script src="/assets/components/imgButton.js"></script>
 	<script src="/assets/components/tab.js"></script>
+	<script src="/assets/components/viewer.js"></script>
 	<script type="module" src="/assets/app.js"></script>
 
 </body>
