--- a/app/index.html
+++ b/app/index.html
@@ -49,5 +49,8 @@
 	<script src="/assets/components/menu.js"></script>
 	<script type="module" src="/assets/app.js"></script>
 
+	<script type="module" src="/assets/blocos/m-bloco.js"></script>
+	<script type="module" src="/assets/blocos/m-comunidades.js"></script>
+
 </body>
 </html>
