--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
 
 	<script type="module" src="/assets/blocos/m-bloco.js"></script>
 	<script type="module" src="/assets/blocos/m-comunidades.js"></script>
+	<script type="module" src="/assets/blocos/m-pessoas.js"></script>
 
 </body>
 </html>
