implementa bloco criar comunidade (web component)

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
 	<script type="module" src="/assets/blocos/m-bloco.js"></script>
 	<script type="module" src="/assets/blocos/m-comunidades.js"></script>
 	<script type="module" src="/assets/blocos/m-pessoas.js"></script>
+	<script type="module" src="/assets/blocos/m-criar-comunidade.js"></script>
 
 </body>
 </html>
