--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,12 @@
 	<script type="module" src="/assets/blocos/m-comunidades.js"></script>
 	<script type="module" src="/assets/blocos/m-pessoas.js"></script>
 	<script type="module" src="/assets/blocos/m-criar-comunidade.js"></script>
+	<script type="module" src="/assets/blocos/m-avatar.js"></script>
+	<script type="module" src="/assets/blocos/m-nome.js"></script>
+	<script type="module" src="/assets/blocos/m-descricao.js"></script>
+	<script type="module" src="/assets/blocos/m-cartao-de-visita.js"></script>
+	<script type="module" src="/assets/blocos/m-adicionar-imagem.js"></script>
+	<script type="module" src="/assets/blocos/m-albuns.js"></script>
 
 </body>
 </html>
