implementa blocos de texto e blog

--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,8 @@
 	<script type="module" src="/assets/blocos/m-cartao-de-visita.js"></script>
 	<script type="module" src="/assets/blocos/m-adicionar-imagem.js"></script>
 	<script type="module" src="/assets/blocos/m-albuns.js"></script>
+	<script type="module" src="/assets/blocos/m-adicionar-texto.js"></script>
+	<script type="module" src="/assets/blocos/m-blogs.js"></script>
 
 </body>
 </html>
