--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,8 @@
 	<script type="module" src="/assets/blocos/m-albuns.js"></script>
 	<script type="module" src="/assets/blocos/m-adicionar-texto.js"></script>
 	<script type="module" src="/assets/blocos/m-blogs.js"></script>
+	<script type="module" src="/assets/blocos/m-blog.js"></script>
+	<script type="module" src="/assets/blocos/m-album.js"></script>
 
 </body>
 </html>
