--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,8 @@
 	<script type="module" src="/assets/blocos/m-blogs.js"></script>
 	<script type="module" src="/assets/blocos/m-blog.js"></script>
 	<script type="module" src="/assets/blocos/m-album.js"></script>
+	<script type="module" src="/assets/blocos/m-imagem.js"></script>
+	<script type="module" src="/assets/blocos/m-texto.js"></script>
 
 </body>
 </html>
