--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 	<title>maloca</title>
 	<link rel="icon" href="/assets/images/maloca.png" type="image/png">
     <link rel="stylesheet" href="/assets/styles/reset.css">
-    <link rel="stylesheet" href="/assets/styles/app.css">
+	<link rel="stylesheet" id="estilo-app" href="/assets/styles/estilo-0-padrao.css">
 	<link rel="stylesheet" href="/assets/styles/boasVindas.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
 
 	<div id="tab-bar"></div>
     
-	<maloca-viewer id="viewer"></maloca-viewer>
+	<maloca-viewer id="viewer" style="background-color: var(--cor-fundo)"></maloca-viewer>
 
 	<footer id="footer">
 		<div class="footer-group">
