implementa blocos de comentário

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,9 @@
 	<script type="module" src="/assets/blocos/m-album.js"></script>
 	<script type="module" src="/assets/blocos/m-imagem.js"></script>
 	<script type="module" src="/assets/blocos/m-texto.js"></script>
+	<script type="module" src="/assets/blocos/m-comentarios.js"></script>
+	<script type="module" src="/assets/blocos/m-adicionar-comentario.js"></script>
+	<script type="module" src="/assets/blocos/m-comentario.js"></script>
 
 </body>
 </html>
