altera ícones png para svg e os estiliza

--- a/app/index.html
+++ b/app/index.html
@@ -14,16 +14,16 @@
 
 	<nav id="nav-bar">
 		<div class="nav-group">
-			<img-button id="menu" imagem="/assets/images/menu.png" descricao="menu"></img-button>
-			<img-button id="inicio" imagem="/assets/images/maloca.png" descricao="página inicial"></img-button>
+			<img-button id="menu" imagem="/assets/images/menu.svg" descricao="menu"></img-button>
+			<img-button id="inicio" imagem="/assets/images/maloca.svg" descricao="página inicial"></img-button>
 		</div>
 		<div class="nav-group">
 			<span id="view-title" style="vertical-align: middle;">maloca - início</span>
 		</div>
 		<div class="nav-group">
-			<img-button id="editar" class="disabled" imagem="/assets/images/editar.png" descricao="editar"></img-button>
-			<img-button id="clonar" class="disabled" imagem="/assets/images/clonar.png" descricao="clonar"></img-button>
-			<img-button id="info" class="disabled" imagem="/assets/images/info.png" descricao="informação"></img-button>
+			<img-button id="editar" class="disabled" imagem="/assets/images/editar.svg" descricao="editar"></img-button>
+			<img-button id="clonar" class="disabled" imagem="/assets/images/clonar.svg" descricao="clonar"></img-button>
+			<img-button id="info" class="disabled" imagem="/assets/images/info.svg" descricao="informação"></img-button>
 		</div>
 	</nav>
 
