melhora renderização do menu

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 	<script src="/assets/components/imgButton.js"></script>
 	<script src="/assets/components/tab.js"></script>
 	<script src="/assets/components/viewer.js"></script>
-	<script src="/assets/components/menu.js"></script>
+	<script type="module" src="/assets/components/menu.js"></script>
 	<script type="module" src="/assets/app.js"></script>
 
 	<script type="module" src="/assets/blocos/m-bloco.js"></script>
