implementa novos blocos

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,8 @@
 	<script type="module" src="/assets/blocos/m-adicionar-comentario.js"></script>
 	<script type="module" src="/assets/blocos/m-comentario.js"></script>
 	<script type="module" src="/assets/blocos/m-participar.js"></script>
+	<script type="module" src="/assets/blocos/m-criar-album.js"></script>
+	<script type="module" src="/assets/blocos/m-criar-blog.js"></script>
 
 </body>
 </html>
