--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,11 @@
 	<script type="module" src="/assets/blocos/m-participar.js"></script>
 	<script type="module" src="/assets/blocos/m-criar-album.js"></script>
 	<script type="module" src="/assets/blocos/m-criar-blog.js"></script>
+	<script type="module" src="/assets/blocos/m-foruns.js"></script>
+	<script type="module" src="/assets/blocos/m-criar-forum.js"></script>
+	<script type="module" src="/assets/blocos/m-forum.js"></script>
+	<script type="module" src="/assets/blocos/m-adicionar-topico.js"></script>
+	<script type="module" src="/assets/blocos/m-topico.js"></script>
 
 </body>
 </html>
