implementa bloco de imagem de fundo

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
 	<script type="module" src="/assets/blocos/m-forum.js"></script>
 	<script type="module" src="/assets/blocos/m-adicionar-topico.js"></script>
 	<script type="module" src="/assets/blocos/m-topico.js"></script>
+	<script type="module" src="/assets/blocos/m-fundo.js"></script>
 
 </body>
 </html>
